apps/arr-stack/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: arr-stack
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: optiplex
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.11.11.20260606-153911
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8096
        # - containerPort: 8920
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-cache
          mountPath: /cache
        - name: jellyfin-data
          mountPath: /data/media
          subPath: media
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: jellyfin-cache
        persistentVolumeClaim:
          claimName: jellyfin-cache-pvc
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: data-pvc
