apps/arr-stack/jellyfin/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: arr-stack  
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      nodePort: 30000
