apps/arr-stack/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: arr-stack  
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: http
    # - port: 8920
    #   targetPort: 8920
    #   protocol: TCP
    #   name: https
