apps/arr-stack/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-lan
  namespace: arr-stack
  annotations:
    gethomepage.dev/description: Media Viewer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/pod-selector: "app=jellyfin"
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
